@@ -1,0 +1,8 @@
+The arch mages of old knew the secrets of opening portals to other
+dimansions. Long ago this knowledge was completely lost to the magic
+community. Recently, some remnants of this knowlege were discovered
+in a lost tome in the library in the circle. Thus far only a few 
+locations are posible but with more expirimentation new locations may
+be revealed.
+
+Grimhaven, The Circle, Cloud city, The heart of the Volcano and Auria.
